objects/geopointe__Action__c.object
<CustomObject>
    <description>Object that stores custom map actions for the Geopointe application.</description>
    <fields>
        <fullName>geopointe__Action_Type__c</fullName>
        <inlineHelpText>URL - Open the URL of a webpage. This can be a internal salesforce.com page or external website. 

Apex - Invoke custom logic using Apex code.

POST (Visualforce) - Will POST a comma separated string of record Ids (idArray) to the provided URL.</inlineHelpText>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>POST (Visualforce)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Deprecated. Use the &quot;Available (Web)&quot; and &quot;Available (SF1)&quot; fields to control usage in the app.</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Apex_Class__c</fullName>
        <inlineHelpText>The name of the Apex class for this action. This class must implement the geopointe.ActionHandler interface.</inlineHelpText>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Apply_To__c</fullName>
        <inlineHelpText>Record (Map Point) - This action will be a link or button displayed in the detail bubble on the Map page and will only apply to the selected record.

List (Data Set Search) - This action will be applied to all records returned in a Data Set search.</inlineHelpText>
        <label>Apply To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Record</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Available_SF1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this action will be available in the Salesforce1 Geopointe mobile app. Currently only Record actions are supported in the Salesforce1 mobile app.</inlineHelpText>
        <label>Available (Mobile)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Available_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this action will be available in web version of Geopointe.</inlineHelpText>
        <label>Available (Web)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Batch_Size__c</fullName>
        <inlineHelpText>For Apex actions this value controls how many records are sent to the receiving Apex class per Apex transaction. If blank, all records are sent in one batch.</inlineHelpText>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Behavior__c</fullName>
        <inlineHelpText>New Window - This link will open a new window or tab in the user&apos;s browser.

Same Window - This link will redirect the user away from the current Map page.

Modal - The URL will be opened in a popup (modal) window within the map page.</inlineHelpText>
        <label>Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Window</fullName>
                </value>
                <value>
                    <fullName>Same Window</fullName>
                </value>
                <value>
                    <fullName>Modal Window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_City__c</fullName>
        <label>Calendar City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_Country__c</fullName>
        <label>Calendar Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_Field_Sets__c</fullName>
        <label>Calendar Field Sets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_Latitude__c</fullName>
        <label>Calendar Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_Longitude__c</fullName>
        <label>Calendar Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_Name__c</fullName>
        <label>Calendar Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_Postal_Code__c</fullName>
        <label>Calendar Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_Record_Id__c</fullName>
        <label>Calendar Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_State__c</fullName>
        <label>Calendar State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_Street__c</fullName>
        <label>Calendar Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_User_Latitude__c</fullName>
        <label>Calendar Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Calendar_User_Longitude__c</fullName>
        <label>Calendar Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Create_Record_Default_Field_Values__c</fullName>
        <label>Create Record Default Field Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Create_Record_SObject__c</fullName>
        <label>Create Record SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Display_Type__c</fullName>
        <inlineHelpText>In the record detail bubble on the Map page Buttons are displayed first and the Links below. 

Buttons are more prominent and should be used for the most commonly used actions.</inlineHelpText>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Button</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Field_Sets_Mapping__c</fullName>
        <label>Field Sets Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Form_Type__c</fullName>
        <inlineHelpText>If Lightning Page Layout is selected, the action will only be visible in Lightning Experience.</inlineHelpText>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field Set</fullName>
                </value>
                <value>
                    <fullName>Lightning Page Layout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Layout__c</fullName>
        <inlineHelpText>Stored JSON data about how to structure the layout of the action</inlineHelpText>
        <label>Layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Link_URL__c</fullName>
        <inlineHelpText>The webpage address navigated to when this action is selected. For internal salesforce.com pages it is best to use relative URLs.</inlineHelpText>
        <label>Link URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_City__c</fullName>
        <label>Map City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Country__c</fullName>
        <label>Map Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Latitude__c</fullName>
        <label>Map Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Longitude__c</fullName>
        <label>Map Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Name__c</fullName>
        <label>Map Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Objects__c</fullName>
        <inlineHelpText>Select the Map Objects this action can be applied to.</inlineHelpText>
        <label>sObjects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Phone__c</fullName>
        <label>Map Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Postal_Code__c</fullName>
        <label>Map Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_State__c</fullName>
        <label>Map State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Street__c</fullName>
        <label>Map Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_User_Latitude__c</fullName>
        <label>User Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_User_Longitude__c</fullName>
        <label>User Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Website__c</fullName>
        <label>Map Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Modal_Height__c</fullName>
        <inlineHelpText>The height of the modal popup. Values can be defined in pixels such as &quot;800px&quot; or percent of window height, &quot;80%&quot;. Modal window size will be automatically adjusted if the values defined are larger than users viewable window size.</inlineHelpText>
        <label>Modal Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Modal_Width__c</fullName>
        <inlineHelpText>The width of the modal popup. Values can be defined in pixels such as &quot;800px&quot; or percent of window width, &quot;80%&quot;. Modal window size will be automatically adjusted if the values defined are larger than users viewable window size.</inlineHelpText>
        <label>Modal Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Name_Translated__c</fullName>
        <label>Name (Translated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Placeholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Order__c</fullName>
        <inlineHelpText>Controls the order in which links and buttons are displayed in the action sections on the Map page.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_City__c</fullName>
        <label>Place City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_Country__c</fullName>
        <label>Place Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_Field_Sets__c</fullName>
        <label>Place Field Sets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_Latitude__c</fullName>
        <label>Place Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_Longitude__c</fullName>
        <label>Place Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_Name__c</fullName>
        <label>Place Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_Phone__c</fullName>
        <label>Place Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_Postal_Code__c</fullName>
        <label>Place Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_State__c</fullName>
        <label>Place State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_Street__c</fullName>
        <label>Place Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_User_Latitude__c</fullName>
        <label>User Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_User_Longitude__c</fullName>
        <label>User Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Place_Website__c</fullName>
        <label>Place Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Point_Type__c</fullName>
        <inlineHelpText>Select the type of Point this action can be applied to. Record, salesforce records. Places, the results of a places search, i.e. &apos;coffee shops&apos;. Map, apply any location on the map with an address search or right click. Route Stop, actions for route stops.</inlineHelpText>
        <label>Point Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>geopointe__Display_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Map</fullName>
                </value>
                <value>
                    <fullName>Place</fullName>
                </value>
                <value>
                    <fullName>Record</fullName>
                    <default>true</default>
                    <label>Record</label>
                </value>
                <value>
                    <fullName>Route Stop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__RecordTypeIdMapping__c</fullName>
        <label>Record Type Id Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_City__c</fullName>
        <label>Record City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_Country__c</fullName>
        <label>Record Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_Field_Sets__c</fullName>
        <label>Record Field Sets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_Latitude__c</fullName>
        <label>Record Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_Longitude__c</fullName>
        <label>Record Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_Postal_Code__c</fullName>
        <label>Record Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_Record_Id__c</fullName>
        <label>Record Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_State__c</fullName>
        <label>Record State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_Street__c</fullName>
        <label>Record Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_User_Latitude__c</fullName>
        <label>User Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Record_User_Longitude__c</fullName>
        <label>User Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Require_User_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, and if User Latitude/Longitude fields are mapped, this Action will only be performed if User Location is available.</inlineHelpText>
        <label>Require User Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Stop_City__c</fullName>
        <label>Record City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Stop_Country__c</fullName>
        <label>Record Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Stop_Field_Sets__c</fullName>
        <label>Record Field Sets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Stop_Latitude__c</fullName>
        <label>Record Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Stop_Longitude__c</fullName>
        <label>Record Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Stop_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Stop_Postal_Code__c</fullName>
        <label>Record Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Stop_State__c</fullName>
        <label>Record State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Stop_Street__c</fullName>
        <label>Record Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Stop_User_Latitude__c</fullName>
        <label>User Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Stop_User_Longitude__c</fullName>
        <label>User Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Run_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign using active assignment rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Standard_Action__c</fullName>
        <inlineHelpText>If set, these are default actions included with the Geopointe application.</inlineHelpText>
        <label>Standard Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Status_Message_Translated__c</fullName>
        <label>Status Message (Translated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Placeholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Status_Message__c</fullName>
        <inlineHelpText>This text is display while the Apex operation is being executed. Text should be short and descriptive such as: &quot;Loading...&quot;, &quot;Updating Contacts...&quot;, &quot;Processing...&quot;, etc.</inlineHelpText>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__User_Latitude__c</fullName>
        <label>User Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__User_Longitude__c</fullName>
        <label>User Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geopointe Action</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Apply_To__c</columns>
        <columns>geopointe__Action_Type__c</columns>
        <columns>geopointe__Standard_Action__c</columns>
        <columns>geopointe__Map_Objects__c</columns>
        <columns>geopointe__Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Actions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>